Changed some spacing on footer in home page & projects page, working on fixing spacing changes introduced by grid in projects page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,7 +2,7 @@
     background-color: #123C69;
     /*add these to every web page to make footer align properly*/
     margin: 0;
-    min-height: calc(100vh - 50px);
+    min-height: calc(100vh - 48px);
 }
 .carousel{
     /* Shifts page down from the header */
